edit image path

--- a/views/checkout/cart.hbs
+++ b/views/checkout/cart.hbs
@@ -37,7 +37,7 @@
                     <tr class="">
                       <td class="">
                         <div class="product-info">
-                          <img width="80" src="/static/images/shop/cart-1.jpg" alt="" />
+                          <img width="80" src="/static/images/cart-1.jpg" alt="" />
                           <a href="">Kính nam</a>
                         </div>
                       </td>
@@ -49,7 +49,7 @@
                     <tr class="">
                       <td class="">
                         <div class="product-info">
-                          <img width="80" src="/static/images/shop/cart-1.jpg" alt="" />
+                          <img width="80" src="/static/images/cart-1.jpg" alt="" />
                           <a href="">Kính nam</a>
                         </div>
                       </td>
@@ -61,7 +61,7 @@
                     <tr class="">
                       <td class="">
                         <div class="product-info">
-                          <img width="80" src="/static/images/shop/cart-1.jpg" alt="" />
+                          <img width="80" src="/static/images/cart-1.jpg" alt="" />
                           <a href="">Kính nam</a>
                         </div>
                       </td>
