--- a/views/checkout/payment.hbs
+++ b/views/checkout/payment.hbs
@@ -70,11 +70,12 @@
                         <div class="block">
                             <h4 class="widget-title">Thông tin đơn hàng</h4>
                             <div class="media product-card">
-                                <a class="pull-left" href="/product/detail">
-                                    <img class="media-object" src="/static/images/shop/cart-1.jpg" alt="Image" />
+                                {{!-- TODO: edit detail page --}}
+                                <a class="pull-left" href="/product/list">
+                                    <img class="media-object" src="/static/images/cart-1.jpg" alt="Image" />
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="media-heading"><a href="/product/detail">Kính nam</a>
+                                    <h4 class="media-heading"><a href="/product/list">Kính nam</a>
                                     </h4>
                                     <p class="price">1 x 200000 đồng</p>
                                     <span class="remove">Xóa</span>
@@ -98,7 +99,7 @@
                                 <span>195000 đồng</span>
                             </div>
                             <div class="verified-icon">
-                                <img src="/static/images/shop/verified.png">
+                                <img src="/static/images/verified.png">
                             </div>
                         </div>
                     </div>
