--- a/views/product/list.hbs
+++ b/views/product/list.hbs
@@ -1,3 +1,4 @@
+{{#if this}}
 <section class="products section">
     <div class="container">
         <div class="row">
@@ -87,3 +88,6 @@
         </div>
     </div>
 </section>
+{{else}}
+    <h2>Không có sản phẩm nào</h2>
+{{/if}}
