--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -187,6 +187,10 @@
 							<a href="/">Trang chủ</a>
 						</li>
 
+						<li class="dropdown ">
+							<a href="/product/list">Tất cả sản phẩm</a>
+						</li>
+
 						<!-- Male -->
 						<li class="dropdown dropdown-slide full-width">
 							<a href="/product/list?gender=men" class="dropdown-toggle" data-toggle="dropdown"
