--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -245,9 +245,9 @@
 											<li role="separator" class="divider"></li>
 											<li><a href="/product/list?gender=women&category=footwear&group=running">Giày chạy bộ</a>
 											</li>
-											<li><a href="/product/list?gender=women&category=footwear&group=running">Giày cao gót</a>
+											<li><a href="/product/list?gender=women&category=footwear&group=heel">Giày cao gót</a>
 											</li>
-											<li><a href="/product/list?gender=women&category=footwear&group=running">Giày búp bê</a>
+											<li><a href="/product/list?gender=women&category=footwear&group=flat">Giày búp bê</a>
 											</li>
 											<li><a href="/product/list?gender=women&category=footwear&group=sneaker">Sneaker</a></li>
 										</ul>
@@ -285,10 +285,8 @@
 								<span class="tf-ion-ios-arrow-down"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="/product/list?brand=vascara">Vascara</a></li>
-								<li><a href="/product/list?brand=umbro">Umbro</a></li>
 								<li><a href="/product/list?brand=nike">Nike</a></li>
 								<li><a href="/product/list?brand=adidas">Adidas</a></li>
-								<li><a href="/product/list?brand=vina">Vina giầy</a></li>
 							</ul><!-- / .dropdown-menu -->
 						</li>
 						<!-- Brand -->
