fix view for new database

--- a/views/dashboard/profile.hbs
+++ b/views/dashboard/profile.hbs
@@ -10,7 +10,7 @@
                 <div class="dashboard-wrapper dashboard-user-profile">
                     <div class="media">
                         <div class="pull-left text-center" href="#">
-                            <img class="media-object user-img" src="/static/images/avater.jpg" alt="Image">
+                            <img class="media-object user-img" src="/static/images/avatar.jpg" alt="Image">
                             <a href="#x" class="btn btn-transparent mt-20">Thay đổi ảnh đại diện</a>
                         </div>
                         <div class="media-body">
