--- a/views/partials/product_list.hbs
+++ b/views/partials/product_list.hbs
@@ -7,7 +7,7 @@
 				{{#if this.hasBage}}
 				<span class="bage">Sale</span>
 				{{/if}}
-				<img class="img-responsive" src="/static/{{this.imgpath}}"
+				<img class="img-responsive" src="{{this.imgpath}}"
 					alt="product-img" />
 				<div class="preview-meta">
 					<ul>
