--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -28,14 +28,14 @@
                             <div class='carousel-inner '>
 
                                 <div class='item active'>
-                                    <img src='/static/{{active_img}}' alt=''
-                                        data-zoom-image="/static/{{active_img}}" />
+                                    <img src='{{active_img}}' alt=''
+                                        data-zoom-image="{{active_img}}" />
                                 </div>
 
                                 {{#each img}}
                                 <div class='item'>
-                                    <img src='/static/{{this}}' alt=''
-                                        data-zoom-image="/static/{{this}}" />
+                                    <img src='{{this}}' alt=''
+                                        data-zoom-image="{{this}}" />
                                 </div>
                                 {{/each}}
                             </div>
@@ -52,11 +52,11 @@
                         <!-- thumb -->
                         <ol class='carousel-indicators mCustomScrollbar meartlab'>
                             <li data-target='#carousel-custom' data-slide-to='0' class='active'>
-                                <img src='/static/{{active_img}}' alt='' />
+                                <img src='{{active_img}}' alt='' />
                             </li>
                             {{#each img}}
                             <li data-target='#carousel-custom' data-slide-to='1'>
-                                <img src='/static/{{this}}' alt='' />
+                                <img src='{{this}}' alt='' />
                             </li>
                             {{/each}}
                         </ol>
@@ -148,7 +148,7 @@
 
                                         <a class="pull-left" href="#">
                                             <img class="media-object comment-avatar"
-                                                src="/static/images/blog/avater-1.jpg" alt="" width="50" height="50" />
+                                                src="/static/images/avatar-1.jpg" alt="" width="50" height="50" />
                                         </a>
 
                                         <div class="media-body">
@@ -178,7 +178,7 @@
 
                                         <a class="pull-left" href="#">
                                             <img class="media-object comment-avatar"
-                                                src="/static/images/blog/avater-4.jpg" alt="" width="50" height="50" />
+                                                src="/static/images/blog/avatar-4.jpg" alt="" width="50" height="50" />
                                         </a>
 
                                         <div class="media-body">
@@ -209,7 +209,7 @@
 
                                         <a class="pull-left" href="#">
                                             <img class="media-object comment-avatar"
-                                                src="/static/images/blog/avater-1.jpg" alt="" width="50" height="50">
+                                                src="/static/images/blog/avatar-1.jpg" alt="" width="50" height="50">
                                         </a>
 
                                         <div class="media-body">
