--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -236,7 +236,7 @@
 						</li>
 						<!-- Male -->
 						<!-- Male -->
-						<li class="dropdown dropdown-slide">
+						<li class="dropdown dropdown-slide full-width">
 							<a href="/product/list?gender=men" class="dropdown-toggle" data-toggle="dropdown"
 								data-hover="dropdown" data-delay="350" role="button" aria-haspopup="true"
 								aria-expanded="false">Đồ Nữ <span class="tf-ion-ios-arrow-down"></span></a>
