fix categories property

--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -119,11 +119,11 @@
                         </div>
                     </div>
 
-                    {{#if categories}}
+                    {{#if tag}}
                     <div class="product-category">
                         <span>Danh mục:</span>
                         <ul>
-                            {{#each categories}}
+                            {{#each tag}}
                             <li><a href="#">{{this}}</a></li>
                             {{/each}}
                         </ul>
