--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -120,15 +120,18 @@
                     </div>
 
                     {{#if tag}}
-                    <div class="product-category">
+                    <!-- Widget tag -->
+                    <div class="widget widget-tag product-category">
                         <span>Danh mục:</span>
-                        <ul>
+                        <ul class="widget-tag-list">
                             {{#each tag}}
-                            <li><a href="#">{{this}}</a></li>
+                            <li><a href="#">{{this}}</a>
+                            </li>
                             {{/each}}
                         </ul>
-                    </div>
+                    </div> <!-- End tag  -->
                     {{/if}}
+
                     <a href="/checkout/cart" class="btn btn-main mt-20">Thêm vào giỏ</a>
                 </div>
             </div>
@@ -259,7 +262,7 @@
                 <h2>Related Products</h2>
             </div>
         </div>
-        {{> product_list products=relate}}
+        {{> productList products=relate}}
     </div>
 </section> --}}
 
