edit file name to camel case

--- a/views/partials/productList.hbs
+++ b/views/partials/productList.hbs
@@ -7,8 +7,7 @@
 				{{#if this.hasBage}}
 				<span class="bage">Sale</span>
 				{{/if}}
-				<img class="img-responsive" src="{{this.imgpath}}"
-					alt="product-img" />
+				<img class="img-responsive" src="{{this.imgpath}}" alt="product-img" />
 				<div class="preview-meta">
 					<ul>
 						<li>
@@ -35,5 +34,5 @@
 
 </div>
 {{else}}
-	<h2>Không có món hàng nào</h2>
+<h2>Không có món hàng nào</h2>
 {{/if}}
