Make title shorter to display (Fix 5 items)

--- a/views/partials/productList.hbs
+++ b/views/partials/productList.hbs
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 			<div class="product-content">
-				<h4><a href="/product/{{this.id}}">{{this.name}}</a></h4>
+				<h4><a href="/product/{{this.id}}" title="{{this.name}}">{{this.title}}</a></h4>
 				<p class="price">{{this.price}} đồng</p>
 			</div>
 		</div>
