Chinh sua loi nho trong css

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -261,7 +261,7 @@
 										<ul>
 											<li class="dropdown-header">Quần áo</li>
 											<li role="separator" class="divider"></li>
-											<li><a href="/product/list?gender=women&category=wear&group=t_shirt">Áo thun</li>
+											<li><a href="/product/list?gender=women&category=wear&group=t_shirt">Áo thun</a></li>
 											<li><a href="/product/list?gender=women&category=wear&group=shirt">Áo sơ mi</a></li>
 											<li><a href="/product/list?gender=women&category=wear&group=skirt">Váy</a></li>
 											<li><a href="/product/list?gender=women&category=wear&group=dress">Đầm</a></li>
