--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1957,7 +1957,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 
 .widget .widget-title {
   margin: 0;
-  padding-bottom: 15px;
+  padding: 15px;
   font-size: 14px;
   font-weight: 400;
   text-transform: uppercase;
