add static pages

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -334,19 +334,19 @@
 					</ul>
 					<ul class="footer-menu">
 						<li>
-							<a href="#">GIỚI THIỆU</a>
+							<a href="/about">GIỚI THIỆU</a>
 						</li>
 						<li>
-							<a href="#">LIÊN HỆ</a>
+							<a href="/contact">LIÊN HỆ</a>
 						</li>
 						<li>
-							<a href="#">CÂU HỎI THƯỜNG GẶP</a>
+							<a href="/faq">CÂU HỎI THƯỜNG GẶP</a>
 						</li>
 						<li>
-							<a href="#">ĐIỀU KHOẢN DỊCH VỤ</a>
+							<a href="/terms">ĐIỀU KHOẢN DỊCH VỤ</a>
 						</li>
 						<li>
-							<a href="#">CHÍNH SÁCH BẢO MẬT</a>
+							<a href="/policy">CHÍNH SÁCH BẢO MẬT</a>
 						</li>
 					</ul>
 					<p class="copyright-text">Powered by Bootstrap</p>
