--- a/views/user/forget-password.hbs
+++ b/views/user/forget-password.hbs
@@ -5,10 +5,10 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
           <h2 class="text-center">Chào mừng bạn trở lại</h2>
-          <form class="text-left clearfix">
+          <form method='POST' class="text-left clearfix">
             <p>Hãy nhập tài khoản email của bạn để chúng tôi hỗ trợ bạn lấy lại tài khoản.</p>
             <div class="form-group">
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+              <input name="email" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-main text-center">Làm mới mật khẩu</button>
