--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
-          <h2 class="text-center">Dang nhap</h2>
+          <h2 class="text-center">Đăng nhập</h2>
           {{#if this.alert}}
           {{#with alert}}
           {{{createAlert this}}}
@@ -11,7 +11,7 @@
           {{/if}}
           <form method='POST' class="text-left clearfix" action="#">
             <div class="form-group">
-              <input name='email' type="email" class="form-control" placeholder="Email">
+              <input name='username' type="text" class="form-control" placeholder="Ten dang nhap">
             </div>
             <div class="form-group">
               <input name='password' type="password" class="form-control" placeholder="Mật khẩu">
