--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -20,7 +20,7 @@
               <input name="username" type="text" class="form-control"  placeholder="Ten tai khoan">
             </div>
             <div class="form-group">
-              <input name="password" type="password" class="form-control"  placeholder="Mat khau">
+              <input name="password" minlength=6 type="password" class="form-control"  placeholder="Mat khau">
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-main text-center">Đăng kí</button>
