--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -203,11 +203,15 @@
 										<ul>
 											<li class="dropdown-header">Giày</li>
 											<li role="separator" class="divider"></li>
-											<li><a href="/product/list?gender=men&category=footwear&group=running">Giày chạy bộ</a>
+											<li><a href="/product/list?gender=men&category=footwear&group=running">Giày
+													chạy bộ</a>
 											</li>
-											<li><a href="/product/list?gender=men&category=footwear&group=football">Giày đá bóng</a>
+											<li><a href="/product/list?gender=men&category=footwear&group=football">Giày
+													đá bóng</a>
 											</li>
-											<li><a href="/product/list?gender=men&category=footwear&group=sneaker">Sneaker</a></li>
+											<li><a
+													href="/product/list?gender=men&category=footwear&group=sneaker">Sneaker</a>
+											</li>
 										</ul>
 									</div>
 
@@ -215,10 +219,14 @@
 										<ul>
 											<li class="dropdown-header">Quần áo</li>
 											<li role="separator" class="divider"></li>
-											<li><a href="/product/list?gender=men&category=wear&group=t_shirt">Áo thun</a></li>
-											<li><a href="/product/list?gender=men&category=wear&group=shirt">Áo sơ mi</a></li>
-											<li><a href="/product/list?gender=men&category=wear&group=short_pant">Quần short</a></li>
-											<li><a href="/product/list?gender=men&category=wear&group=pant">Quần dài</a></li>
+											<li><a href="/product/list?gender=men&category=wear&group=t_shirt">Áo
+													thun</a></li>
+											<li><a href="/product/list?gender=men&category=wear&group=shirt">Áo sơ
+													mi</a></li>
+											<li><a href="/product/list?gender=men&category=wear&group=short_pant">Quần
+													short</a></li>
+											<li><a href="/product/list?gender=men&category=wear&group=pant">Quần dài</a>
+											</li>
 										</ul>
 									</div>
 
@@ -226,9 +234,15 @@
 										<ul>
 											<li class="dropdown-header">Phụ kiện</li>
 											<li role="separator" class="divider"></li>
-											<li><a href="/product/list?gender=men&category=accessories&group=sock">Vớ</a></li>
-											<li><a href="/product/list?gender=men&category=accessories&group=bag">Balo</a></li>
-											<li><a href="/product/list?gender=men&category=accessories&group=glass">Kính</a></li>
+											<li><a
+													href="/product/list?gender=men&category=accessories&group=sock">Vớ</a>
+											</li>
+											<li><a
+													href="/product/list?gender=men&category=accessories&group=bag">Balo</a>
+											</li>
+											<li><a
+													href="/product/list?gender=men&category=accessories&group=glass">Kính</a>
+											</li>
 										</ul>
 									</div>
 								</div><!-- / .row -->
@@ -247,13 +261,18 @@
 										<ul>
 											<li class="dropdown-header">Giày</li>
 											<li role="separator" class="divider"></li>
-											<li><a href="/product/list?gender=women&category=footwear&group=running">Giày chạy bộ</a>
+											<li><a href="/product/list?gender=women&category=footwear&group=running">Giày
+													chạy bộ</a>
 											</li>
-											<li><a href="/product/list?gender=women&category=footwear&group=heel">Giày cao gót</a>
+											<li><a href="/product/list?gender=women&category=footwear&group=heel">Giày
+													cao gót</a>
 											</li>
-											<li><a href="/product/list?gender=women&category=footwear&group=flat">Giày búp bê</a>
+											<li><a href="/product/list?gender=women&category=footwear&group=flat">Giày
+													búp bê</a>
 											</li>
-											<li><a href="/product/list?gender=women&category=footwear&group=sneaker">Sneaker</a></li>
+											<li><a
+													href="/product/list?gender=women&category=footwear&group=sneaker">Sneaker</a>
+											</li>
 										</ul>
 									</div>
 
@@ -261,10 +280,14 @@
 										<ul>
 											<li class="dropdown-header">Quần áo</li>
 											<li role="separator" class="divider"></li>
-											<li><a href="/product/list?gender=women&category=wear&group=t_shirt">Áo thun</a></li>
-											<li><a href="/product/list?gender=women&category=wear&group=shirt">Áo sơ mi</a></li>
-											<li><a href="/product/list?gender=women&category=wear&group=skirt">Váy</a></li>
-											<li><a href="/product/list?gender=women&category=wear&group=dress">Đầm</a></li>
+											<li><a href="/product/list?gender=women&category=wear&group=t_shirt">Áo
+													thun</a></li>
+											<li><a href="/product/list?gender=women&category=wear&group=shirt">Áo sơ
+													mi</a></li>
+											<li><a href="/product/list?gender=women&category=wear&group=skirt">Váy</a>
+											</li>
+											<li><a href="/product/list?gender=women&category=wear&group=dress">Đầm</a>
+											</li>
 										</ul>
 									</div>
 
@@ -272,9 +295,15 @@
 										<ul>
 											<li class="dropdown-header">Phụ kiện</li>
 											<li role="separator" class="divider"></li>
-											<li><a href="/product/list?gender=women&category=accessories&group=sock">Vớ</a></li>
-											<li><a href="/product/list?gender=women&category=accessories&group=bag">Balo</a></li>
-											<li><a href="/product/list?gender=women&category=accessories&group=glass">Kính</a></li>
+											<li><a
+													href="/product/list?gender=women&category=accessories&group=sock">Vớ</a>
+											</li>
+											<li><a
+													href="/product/list?gender=women&category=accessories&group=bag">Balo</a>
+											</li>
+											<li><a
+													href="/product/list?gender=women&category=accessories&group=glass">Kính</a>
+											</li>
 										</ul>
 									</div>
 								</div><!-- / .row -->
@@ -360,7 +389,8 @@
     =====================================-->
 
 	<!-- Main jQuery -->
-	<script src="https://code.jquery.com/jquery-git.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<!-- Bootstrap 3.1 -->
 	<script src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
 	<!-- Bootstrap Touchpin -->
@@ -402,8 +432,8 @@
 
 
 	<!-- Custom js -->
-	<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBItRd4sQ_aXlQG_fvEzsxvuYyaWnJKETk&callback=initMap"></script>
+	{{!-- <script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBItRd4sQ_aXlQG_fvEzsxvuYyaWnJKETk&callback=initMap"></script> --}}
 
 	<script src="/static/js/script.js"></script>
 
